kubernetes/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: staging
spec:
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
